Fix element spacing for landing page

--- a/_sass/_clir.scss
+++ b/_sass/_clir.scss
@@ -30,6 +30,7 @@
 }
 
 #about_clir {
+  margin-top: -55px;
   padding: 60px 0;
 }
 
